InnoDB: Increment the lock wait watchdog timeout during CHECK TABLE (Bug #2694)