innobase/sync/sync0arr.c
@@ -890,7 +890,7 @@ sync_arr_wake_threads_if_sema_free(void)
 }
 
 /**************************************************************************
-Prints warnings of long semaphore waits to stderr. Currently > 120 sec. */
+Prints warnings of long semaphore waits to stderr. */
 
 void
 sync_array_print_long_waits(void)
@@ -900,6 +900,7 @@ sync_array_print_long_waits(void)
         ibool		old_val;
 	ibool		noticed = FALSE;
 	ulint           i;
+	ulint		fatal_timeout = srv_fatal_semaphore_wait_threshold;
 
         for (i = 0; i < sync_primary_wait_array->n_cells; i++) {
 
@@ -914,12 +915,13 @@ sync_array_print_long_waits(void)
                 }
 
                 if (cell->wait_object != NULL
-		    && difftime(time(NULL), cell->reservation_time) > 600) {
+		    && difftime(time(NULL), cell->reservation_time)
+		    > fatal_timeout) {
 
-			fputs(
-"InnoDB: Error: semaphore wait has lasted > 600 seconds\n"
+			fprintf(stderr,
+"InnoDB: Error: semaphore wait has lasted > %lu seconds\n"
 "InnoDB: We intentionally crash the server, because it appears to be hung.\n",
-				stderr);
+				fatal_timeout);
 
 		    	ut_error;
                 }
